# clangd-tidy

./: .gitignore  LICENSE  README.md  clangd-tidy  diagnostic_formatter.py  pyproject.toml
.github/workflows/: conventional_commit_checker.yml  format.yml  publish.yml  python.yml
clangd_tidy/: __init__.py  __main__.py  args.py  clangd_tidy_diff_cli.py  diagnostic_formatter.py  line_filter.py  lines_filter.py  main_cli.py  version.py
clangd_tidy/lsp/: __init__.py  clangd.py  client.py  messages.py  rpc.py
clangd_tidy/pylspclient/: LICENSE  __init__.py  json_rpc_endpoint.py  lsp_client.py  lsp_endpoint.py
test/: .clang-tidy  a.cpp  b.cpp  d.cpp
