[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "clangd-tidy"
dynamic = ["version"]
dependencies = ["attrs", "cattrs", "typing-extensions"]
requires-python = ">=3.8"
authors = [{ name = "lljbash", email = "lljbash@gmail.com" }]
description = "A faster alternative to clang-tidy"
readme = "README.md"
keywords = ["clang-tidy", "clangd", "static-analysis", "cpp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Quality Assurance",
]

[project.scripts]
clangd-tidy = "clangd_tidy:main_cli"
clangd-tidy-diff = "clangd_tidy:clang_tidy_diff"

[project.urls]
"Homepage" = "https://github.com/lljbash/clangd-tidy"
"Bug Tracker" = "https://github.com/lljbash/clangd-tidy/issues"

[tool.setuptools_scm]
write_to = "clangd_tidy/_dist_ver.py"

[tool.black]
include = '\.pyi?$'
required-version = "25"

[tool.basedpyright]
include = ["clangd_tidy"]
pythonVersion = "3.8"
pythonPlatform = "Linux"
typeCheckingMode = "strict"

[dependency-groups]
dev = [
    "basedpyright"
]
